Add new quick dinner recipes: "Instant Masala Magic" Bowl, "Desi Shakshuka" Express, and "Masala Rice Glow Up"

--- a/index.html
+++ b/index.html
@@ -121,6 +121,45 @@
             </ul>
         </div>
 
+        <div class="recipe-card">
+            <h2>🍛 The "Instant Masala Magic" Bowl</h2>
+            <p><span class="time">Prep Time: 12 mins</span></p>
+            <p>Quick Indian comfort food:</p>
+            <ul>
+                <li>Heat up frozen paratha or roti</li>
+                <li>Microwave ready-to-eat dal or chana masala</li>
+                <li>Quick raita: yogurt + cucumber + salt</li>
+                <li>Pickle from mom's care package</li>
+                <li>Bonus: leftover sabzi if you have it</li>
+            </ul>
+        </div>
+
+        <div class="recipe-card">
+            <h2>🥘 The "Desi Shakshuka" Express</h2>
+            <p><span class="time">Prep Time: 15 mins</span></p>
+            <p>Quick spicy eggs:</p>
+            <ul>
+                <li>Sauté onions + tomatoes</li>
+                <li>Add garam masala + red chili powder</li>
+                <li>Crack 2 eggs into the mix</li>
+                <li>Cover and cook till eggs set</li>
+                <li>Garnish with cilantro if you're fancy</li>
+            </ul>
+        </div>
+
+        <div class="recipe-card">
+            <h2>🍚 The "Masala Rice Glow Up"</h2>
+            <p><span class="time">Prep Time: 8 mins</span></p>
+            <p>Transform leftover rice:</p>
+            <ul>
+                <li>Heat leftover rice</li>
+                <li>Add tadka: cumin + curry leaves</li>
+                <li>Mix in turmeric + chili powder</li>
+                <li>Toss in frozen peas</li>
+                <li>Squeeze of lemon = chef's kiss</li>
+            </ul>
+        </div>
+
         <div style="text-align: center; margin-top: 40px;">
             <p class="emoji">✨👩‍🍳✨</p>
             <p style="color: #ff66b2; font-size: 1.2em;">Remember: It's not sad girl dinner if you're having fun!</p>
